# distributed-scheduler

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONFIG_SECURITY_SETUP.md  Cargo.toml  DEVELOPER_GUIDE.md  Dockerfile  MODULES_CLI_GUIDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  report.md  rules.md  run_benchmarks.sh  second-round-tunning.md  tasks.md  test_cron.rs  todolist.md  tuning.md
core/: Cargo.toml
core/examples/: config_usage.rs
core/src/: config.rs  config_integration_test.rs  config_loader.rs  config_test.rs  errors.rs  lib.rs
core/src/config/: config_loader.rs  mod.rs  model.rs
core/src/models/: message.rs  mod.rs  task.rs  task_run.rs  worker.rs
core/src/traits/: message_queue.rs  mod.rs  repository.rs  scheduler.rs  task_executor.rs
crates/api/: Cargo.toml
crates/api/src/: auth.rs  error.rs  handlers.rs  lib.rs  middleware.rs  response.rs  routes.rs
crates/api/src/auth/: guards.rs  models.rs  service.rs
crates/api/src/handlers/: auth.rs  health.rs  metrics.rs  monitoring.rs  root.rs  system.rs  tasks.rs  workers.rs
crates/api/src/types/: mod.rs  update_value.rs
crates/api/src/validation/: mod.rs  task.rs  worker.rs
crates/api/tests/: simplified_api_test.rs
crates/api/tests/integration/: auth_extended_tests.rs  auth_tests.rs  mod.rs  system_api_tests.rs  task_api_tests.rs  test_utils.rs  worker_api_tests.rs
crates/application/: Cargo.toml
crates/application/src/: config_cache.rs  lib.rs  object_pool.rs
crates/application/src/interfaces/: mod.rs  scheduler.rs  service_interfaces.rs  task_executor.rs
crates/application/src/ports/: app_scheduler.rs  dispatcher_api_client.rs  executor.rs  messaging.rs  mod.rs  scheduler.rs  service_interfaces.rs  strategy.rs
crates/application/src/services/: cron_utils.rs  dependency_checker.rs  mod.rs  scheduler_service.rs  worker_service.rs
crates/application/src/use_cases/: authentication_service.rs  cron_utils.rs  dependency_checker.rs  mod.rs  scheduler_service.rs  task_dispatch_service.rs  task_planning_service.rs  (+2 more)
crates/common/: Cargo.toml
crates/common/src/: constants.rs  lib.rs  traits.rs  types.rs  utils.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: circuit_breaker.rs  defaults.rs  encrypted_config_storage.rs  enhanced_validation.rs  environment.rs  jwt_secret_manager.rs  lib.rs  secret_manager.rs  security.rs  security_policy.rs  tests.rs  validation.rs
crates/core/: Cargo.toml
crates/core/examples/: config_usage.rs  config_validation.rs  hot_reload_config.rs  multi_source_config.rs  typesafe_config.rs
crates/core/src/: circuit_breaker.rs  config_enhanced.rs  config_management.rs  config_simple_enhanced.rs  container.rs  di.rs  error_handling.rs  errors.rs  executor_registry.rs  lib.rs  logging.rs  metrics_complex.rs  metrics_simple.rs  service_interfaces.rs  service_layer.rs  traits.rs
crates/core/tests/: architecture_optimization_tests.rs  config_integration_test.rs  config_test.rs  lib.rs  message_queue_test.rs
crates/dispatcher/: Cargo.toml
crates/dispatcher/examples/: cron_scheduler_demo.rs
crates/dispatcher/src/: controller.rs  cron_utils.rs  dependency_checker.rs  dependency_checker_test.rs  lib.rs  recovery_service.rs  retry_service.rs  scheduler.rs  scheduler_test.rs  state_listener.rs  strategies.rs  strategies_test.rs  test_utils.rs  worker_failure_detector.rs
crates/dispatcher/tests/: controller_test.rs  cron_utils_test.rs  dependency_checker_test.rs  lib.rs  recovery_service_test.rs  retry_service_test.rs  scheduler_test.rs  state_listener_test.rs  strategies_test.rs  worker_failure_detector_test.rs
crates/domain/: Cargo.toml
crates/domain/src/: entities.rs  errors.rs  events.rs  lib.rs  messaging.rs  repositories.rs  services.rs  sqlx_impls.rs  task_dependency_service.rs  task_query_builder.rs  value_objects.rs
crates/foundation/: Cargo.toml
crates/foundation/src/: container.rs  executor_registry.rs  lib.rs  workflow_generator.rs
crates/foundation/tests/: config_integration_test.rs  message_queue_test.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/examples/: message_queue_switching_demo.rs  redis_stream_consume_demo.rs  redis_stream_publish_demo.rs
crates/infrastructure/src/: circuit_breaker.rs  circuit_breaker_wrapper.rs  cleanup_service.rs  error_handling.rs  in_memory_queue.rs  lib.rs  message_queue.rs  message_queue_factory.rs  message_queue_test.rs  observability.rs  redis_stream.rs  redis_stream_original_backup.rs  resource_monitor.rs  timeout_handler.rs
crates/infrastructure/tests/: complete_e2e_tests.rs  core_integration_tests.rs  database_integration_tests.rs  database_test_utils.rs  dispatcher_worker_integration_tests.rs  end_to_end_tests.rs  integration_tests_basic.rs  message_queue_factory_test.rs  message_queue_integration_tests.rs  message_queue_test.rs  migration_tests.rs  mod.rs  redis_stream_integration_test.rs  redis_stream_performance_test.rs  repository_integration_tests.rs  resource_optimization_test.rs
crates/observability/: Cargo.toml
crates/observability/src/: alerting.rs  cross_component_tracer.rs  dashboard.rs  embedded_monitoring.rs  lib.rs  log_rotation.rs  message_tracing.rs  metrics_collector.rs  mod.rs  performance_testing.rs  structured_logger.rs  task_tracer.rs  telemetry_setup.rs
crates/testing-utils/: Cargo.toml
crates/testing-utils/src/: builders.rs  containers.rs  helpers.rs  lib.rs  mocks.rs
crates/worker/: Cargo.toml
crates/worker/examples/: executor_demo.rs
crates/worker/src/: composed_service.rs  executor_factory.rs  executors.rs  executors_test.rs  integration_tests.rs  lib.rs  refactored_service.rs  service.rs  service_test.rs
crates/worker/tests/: dispatcher_client_test.rs  executor_factory_test.rs  heartbeat_manager_test.rs  task_execution_test.rs  worker_lifecycle_test.rs
infrastructure/: Cargo.toml
infrastructure/src/: database.rs  lib.rs  message_queue.rs  message_queue_test.rs  observability.rs
infrastructure/src/database/: mod.rs
worker/: Cargo.toml
worker/src/: executors.rs  heartbeat.rs  lib.rs  service.rs
(+289 files in other folders)
