[package]
name = "scheduler"
version = "1.0.0"
edition = "2021"
description = "分布式任务调度系统"
authors = ["Scheduler Team"]

[[bin]]
name = "scheduler"
path = "src/main.rs"

[dependencies]
# 工作区内部crates
scheduler-foundation = { path = "crates/foundation" }
scheduler-domain = { path = "crates/domain" }
scheduler-application = { path = "crates/application" }
scheduler-dispatcher = { path = "crates/dispatcher" }
scheduler-worker = { path = "crates/worker" }
scheduler-api = { path = "crates/api" }
scheduler-infrastructure = { path = "crates/infrastructure" }
scheduler-errors = { path = "crates/errors" }
scheduler-config = { path = "crates/config" }
scheduler-observability = { path = "crates/observability" }

# 异步运行时和基础工具
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
futures = "0.3"

# Web框架和HTTP相关
axum = "0.8"
tower = "0.5"
hyper = { version = "1.6", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }

# 数据库相关
sqlx = { workspace = true, features = ["migrate"] }
lapin = "3.0.1"

# 日志和监控
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = "0.30"
opentelemetry-otlp = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.30"
tracing-opentelemetry = "0.31"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# 命令行工具
clap = { version = "4.5", features = ["derive"] }

# 其他工具
rand = "0.9"
hostname = "0.4"
tempfile = "3.0"

[workspace]
resolver = "2"
members = [
    "crates/foundation",
    "crates/domain",
    "crates/application",
    "crates/dispatcher",
    "crates/worker",
    "crates/api",
    "crates/infrastructure",
    "crates/errors",
    "crates/config",
    "crates/observability",
    "crates/testing-utils",
]

[workspace.dependencies]
# 序列化和配置
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.4"
config = "0.15"

# 异步和基础工具
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
futures = "0.3"

# 数据库相关
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "sqlite"
] }
lapin = "3.0.1"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }

# 日志和监控
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.30"
opentelemetry-otlp = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.30"
tracing-opentelemetry = "0.31"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
prometheus = "0.13"

# Web框架和HTTP相关
axum = "0.8"
tower = "0.5"
hyper = { version = "1.6", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
parking_lot = "0.12.4"

# 测试相关
testcontainers = { version = "0.24", features = ["blocking"] }
testcontainers-modules = { version = "0.12", features = ["postgres", "rabbitmq", "redis"] }
mockall = "0.13"
redis = { version = "0.32.4", features = ["tokio-comp", "connection-manager"] }

# 其他工具
tempfile = "3.0"
rand = "0.9"
hostname = "0.4"
criterion = { version = "0.7", features = ["html_reports"] }