[package]
name = "scheduler"
version = "1.0.0"
edition = "2021"
description = "分布式任务调度系统"
authors = ["Scheduler Team"]

[[bin]]
name = "scheduler"
path = "src/main.rs"

[[bin]]
name = "scheduler-dispatcher"
path = "src/bin/dispatcher.rs"

[[bin]]
name = "scheduler-worker"
path = "src/bin/worker.rs"

[[bin]]
name = "scheduler-api"
path = "src/bin/api.rs"

[[bin]]
name = "scheduler-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "scheduler-embedded"
path = "src/bin/embedded.rs"

[dependencies]
# 工作区内部crates
scheduler-core = { path = "crates/core" }
scheduler-common = { path = "crates/common" }
scheduler-domain = { path = "crates/domain" }
scheduler-application = { path = "crates/application" }
scheduler-dispatcher = { path = "crates/dispatcher" }
scheduler-worker = { path = "crates/worker" }
scheduler-api = { path = "crates/api" }
scheduler-infrastructure = { path = "crates/infrastructure" }
scheduler-errors = { path = "crates/errors" }
scheduler-config = { path = "crates/config" }
scheduler-observability = { path = "crates/observability" }

# 异步运行时和基础工具
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# 时间和序列化
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Web框架和HTTP相关
axum = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }

# 数据库相关
sqlx = { workspace = true, features = ["migrate"] }
lapin = { workspace = true }

# 日志和监控
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# 命令行工具
clap = { version = "4.5", features = ["derive"] }

# 其他工具
rand = { workspace = true }
hostname = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/common",
    "crates/domain",
    "crates/application",
    "crates/dispatcher",
    "crates/worker",
    "crates/api",
    "crates/infrastructure",
    "crates/errors",
    "crates/config",
    "crates/observability",
    "crates/testing-utils",
]

[workspace.dependencies]
# 序列化和配置
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.4"
config = "0.15"
figment = { version = "0.10", features = ["toml", "env", "json"] }

# 异步和基础工具
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12.4"

# 数据库相关
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "sqlite"
] }
lapin = "3.4"
redis = { version = "0.32.4", features = ["tokio-comp", "connection-manager"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"
uuid = { version = "1.18", features = ["v4", "serde"] }

# 日志和监控
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.30"
opentelemetry-otlp = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.30"
tracing-opentelemetry = "0.31"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
prometheus = "0.14"

# Web框架和HTTP相关
axum = "0.8"
tower = "0.5"
hyper = { version = "1.7", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
axum-extra = { version = "0.10", features = ["typed-header"] }

# 认证和安全
jsonwebtoken = "9.3"
base64 = "0.22"
sha2 = "0.10"
headers = "0.4"
validator = { version = "0.20", features = ["derive"] }
bcrypt = "0.17.1"
ring = "0.17"
hex = "0.4"
once_cell = "1.19"

# URL和正则表达式
url = "2.5.7"
regex = "1.11.2"

# 测试相关
testcontainers = { version = "0.24", features = ["blocking"] }
testcontainers-modules = { version = "0.12", features = ["postgres", "rabbitmq", "redis"] }
mockall = "0.13"
tokio-test = "0.4"
temp-env = "0.3"

# 其他工具
tempfile = "3.21"
rand = "0.9"
hostname = "0.4"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "parallel_scan_benchmarks"
harness = false

[[example]]
name = "memory_calculation_demo"
path = "examples/memory_calculation_demo.rs"