[package]
name = "scheduler-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
scheduler-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
lapin = { workspace = true }
futures = { workspace = true }