[package]
name = "scheduler-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-server"
path = "src/bin/api-server.rs"

[dependencies]
scheduler-core = { path = "../core" }
scheduler-domain = { path = "../domain" }
scheduler-infrastructure = { path = "../infrastructure" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = {workspace = true}
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
cron = { workspace = true }
# JWT和认证依赖
jsonwebtoken = "9.3"
base64 = "0.22"
sha2 = "0.10"
headers = "0.4"
rand = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true}
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tracing-subscriber = { workspace = true }