[package]
name = "scheduler-api"
version = "0.1.0"
edition = "2021"

[dependencies]
scheduler-application = { path = "../application" }
scheduler-domain = { path = "../domain" }
scheduler-infrastructure = { path = "../infrastructure" }
scheduler-errors = { path = "../errors" }
scheduler-config = { path = "../config" }
scheduler-observability = { path = "../observability" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
cron = { workspace = true }
# JWT和认证依赖
jsonwebtoken = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
headers = { workspace = true }
rand = { workspace = true }
validator = { workspace = true }
# 密码哈希
bcrypt = { workspace = true }
# 用户认证
axum-extra = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tracing-subscriber = { workspace = true }
scheduler-testing-utils = { path = "../testing-utils" }