[package]
name = "scheduler-application"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
scheduler-core = { path = "../core" }
scheduler-domain = { path = "../domain" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Date/time handling
chrono = { workspace = true, features = ["serde"] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true
scheduler-errors = { path = "../errors" }

# Tracing and logging
tracing.workspace = true

# Utilities
uuid = { workspace = true, features = ["v4", "serde"] }
parking_lot = { workspace = true }

[dev-dependencies]
tokio-test = "0.4.4"
mockall.workspace = true
criterion.workspace = true
