[package]
name = "scheduler-application"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
scheduler-domain = { path = "../domain" }
scheduler-config = { path = "../config" }
scheduler-common = { path = "../common" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Date/time handling
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
scheduler-errors = { path = "../errors" }

# Tracing and logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true, features = ["v4", "serde"] }
parking_lot = { workspace = true }
bcrypt = { workspace = true }

# Cron scheduling
cron = { workspace = true }

# Additional dependencies
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
criterion = { workspace = true }
