[package]
name = "scheduler-config"
version = "0.1.0"
edition = "2021"
description = "Configuration management for the distributed task scheduler system"
authors = ["Scheduler Team"]

[features]
default = ["default-encryption"]
default-encryption = []

[dependencies]
# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.4"
config = "0.15"
anyhow = "1.0"
thiserror = "2.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL parsing and validation
url = "2.5"

# Regular expressions
regex = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Security and cryptography
ring = "0.17"
base64 = "0.22"
hex = "0.4"
once_cell = "1.19"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
temp-env = "0.3"
tempfile = "3"