[package]
name = "scheduler-config"
version = "0.1.0"
edition = "2021"
description = "Configuration management for the distributed task scheduler system"
authors = ["Scheduler Team"]

[features]
default = ["default-encryption"]
default-encryption = []

[dependencies]
# Serialization and configuration
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
figment = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time handling
chrono = { workspace = true }

# URL parsing and validation
url = { workspace = true }

# Regular expressions
regex = { workspace = true }

# UUID generation
uuid = { workspace = true, features = ["v4", "serde"] }

# Security and cryptography
ring = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
# Testing
tokio-test = { workspace = true }
temp-env = { workspace = true }
tempfile = { workspace = true }