[package]
name = "scheduler-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
notify = "8.1"
rand = "0.9"

[dev-dependencies]
tempfile = {workspace = true}
scheduler-infrastructure = { path = "../infrastructure" }
testcontainers = {workspace = true}
testcontainers-modules = { workspace = true, features = ["postgres"] }

[[example]]
name = "config_usage"
path = "examples/config_usage.rs"