[package]
name = "scheduler-dispatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
scheduler-foundation = { path = "../foundation" }
scheduler-domain = { path = "../domain" }
scheduler-infrastructure = { path = "../infrastructure" }
scheduler-application = { path = "../application" }
scheduler-observability = { path = "../observability" }
scheduler-testing-utils = { path = "../testing-utils" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
cron = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
scheduler-testing-utils = { path = "../testing-utils" }
