[package]
name = "scheduler-domain"
version = "0.1.0"
edition = "2021"

[dependencies]
# 依赖core来使用统一的错误类型
scheduler-core = { path = "../core" }
# 只依赖必要的基础库，不依赖其他scheduler crates
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = {workspace = true}