[package]
name = "scheduler-domain"
version = "0.1.0"
edition = "2021"

[features]
# 可选的数据库支持，只在需要时启用
sqlx-support = ["sqlx"]

[dependencies]
# 只依赖必要的基础库，不依赖其他scheduler crates
# 体现依赖倒置原则，领域层不依赖任何具体实现
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
scheduler-errors = { path = "../errors" }

# 可选的数据库支持
sqlx = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }