[package]
name = "scheduler-foundation"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
notify = "8.1"
rand = "0.9"
scheduler-domain = { path = "../domain" }
scheduler-errors = { path = "../errors" }
scheduler-config = { path = "../config" }

[dev-dependencies]
scheduler-testing-utils = { path = "../testing-utils" }
tempfile = {workspace = true}
testcontainers = {workspace = true}
testcontainers-modules = { workspace = true, features = ["postgres"] }