[package]
name = "scheduler-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
scheduler-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
lapin = { workspace = true }
futures = { workspace = true }
# OpenTelemetry dependencies
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
testcontainers = {workspace = true}
testcontainers-modules = { workspace = true, features = ["rabbitmq"] }