[package]
name = "scheduler-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
scheduler-foundation = { path = "../foundation" }
scheduler-domain = { path = "../domain" }
scheduler-errors = { path = "../errors" }
scheduler-config = { path = "../config" }
scheduler-observability = { path = "../observability" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
lapin = { workspace = true }
futures = { workspace = true }
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }
metrics = { workspace = true }
prometheus = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.4"

[dev-dependencies]
scheduler-testing-utils = { path = "../testing-utils" }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres", "rabbitmq", "redis"] }
once_cell = "1.19"
criterion = { workspace = true, features = ["html_reports"] }
