[package]
name = "scheduler-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
scheduler-domain = { path = "../domain", features = ["sqlx-support"] }
scheduler-errors = { path = "../errors" }
scheduler-config = { path = "../config" }
scheduler-observability = { path = "../observability" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bcrypt = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
lapin = { workspace = true }
futures = { workspace = true }
redis = { workspace = true }
metrics = { workspace = true }
prometheus = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
scheduler-testing-utils = { path = "../testing-utils" }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres", "rabbitmq", "redis"] }
once_cell = { workspace = true }
criterion = { workspace = true }
