[package]
name = "scheduler-testing-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies for testing utilities
scheduler-domain = { path = "../domain" }
scheduler-errors = { path = "../errors" }

# Async and concurrency
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/time
chrono = { workspace = true, features = ["serde"] }

# Utilities
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Database testing
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json"] }
testcontainers = { workspace = true, optional = true }
testcontainers-modules = { workspace = true, features = ["postgres", "rabbitmq", "redis"], optional = true }

[dev-dependencies]
# For testing the testing utilities themselves
tokio-test = "0.4"

[features]
default = ["database-containers"]
# Feature for enabling database test containers
database-containers = ["testcontainers", "testcontainers-modules"]
# Feature for enabling message queue test containers  
message-queue-containers = ["testcontainers", "testcontainers-modules"]