[package]
name = "scheduler-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
scheduler-core = { path = "../core" }
scheduler-infrastructure = { path = "../infrastructure" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
hostname = { workspace = true }
tracing-subscriber = { workspace = true }
