[package]
name = "scheduler-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
scheduler-foundation = { path = "../foundation" }
scheduler-domain = { path = "../domain" }
scheduler-infrastructure = { path = "../infrastructure" }
scheduler-errors = { path = "../errors" }
scheduler-config = { path = "../config" }
scheduler-observability = { path = "../observability" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
hostname = { workspace = true }
tracing-subscriber = { workspace = true }
